index.md: Add gradient and fix alignment
Fixes #36, #37

--- a/assets/main.css
+++ b/assets/main.css
@@ -13,8 +13,6 @@ nav {
   color: #000;
   background-color: #fff !important;
   width: 100%;
-
-
 }
 
 hr.sepr {
@@ -30,13 +28,10 @@ hr.sepr {
 
 hr.mid-sepr {
   border: 0;
-  height: 2px;
-  background: #333;
-  background-image: -moz-linear-gradient(to right, #ccc, #333, #ccc);
-  background-image: -webkit-linear-gradient(to right, #ccc, #333, #ccc);
-  background-image: -webkit-gradient(linear, to right, from(#ccc), color-stop(#333), to(#ccc));
-  background-image: -ms-linear-gradient(to right, #ccc, #333, #ccc);
-  background-image: -o-linear-gradient(to right, #ccc, #333, #ccc);
+  height: 1px;
+  background: -webkit-linear-gradient(left, transparent 0%,#000 50%,transparent 100%);
+  background: -moz-linear-gradient(left, transparent 0%,#000 50%,transparent 100%);
+  background: linear-gradient(to left, transparent 0%,#000 50%,transparent 100%);
 }
 
 .quotation{
